syntax = "proto3";

message Login {
  string username = 1;
  string password = 2;
}

message LoginS2S {
  string username = 1;
  string password = 2;
  int32 conn_id = 3;
}

message LoginResultS2S {
  bool result = 1;
  string reason = 2;
  int32 uid = 3;
  int32 conn_id = 4;
}

message LoginResult {
  bool result = 1;
  string reason = 2;
  int32 uid = 3;
}
